Rd Natalia, new namespace
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/c060@43 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -6,6 +6,8 @@ export(stability.path,
        fit.glmnet,
        PLL.coxnet,
        plot.peperr.curves,
-       predictProb.glmnet)
+       predictProb.glmnet,
+       EPSGO,
+       tune.glmnet.interval)
 
 
