--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -7,7 +7,8 @@ export(stability.path,
        PLL.coxnet,
        plot.peperr.curves,
        predictProb.glmnet,
-       EPSGO,
-       tune.glmnet.interval)
+    predictProb.coxnet,
+    EPSGO,
+       tune.glmnet.interval, my.balances.folds)
 
 
