namspace minor changes
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/c060@59 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -9,6 +9,6 @@ export(stability.path,
        predictProb.glmnet,
     predictProb.coxnet,
     EPSGO,
-       tune.glmnet.interval, my.balances.folds)
+       tune.glmnet.interval,my.balanced.folds)
 
 
