--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -4,8 +4,8 @@ Date: 2012-06-09
 Author: Martin Sill, Thomas Hielscher, Manuela Zucknick, Natalia Becker.
 Maintainer: Martin Sill <m.sill@dkfz.de>
 Title: Additional variable selection, model validation and parameter tuning functions for glmnet models
-Depends: glmnet, parallel, mlegp, tgp
-Imports: glmnet, parallel, mlegp, tgp
+Depends: glmnet, parallel, mlegp, tgp, peperr
+Imports: glmnet, parallel, mlegp, tgp, peperr
 Suggests: survival
 Description: c060 provides additonal functions to perform stability selection, model validation and parameter tuning for glmnet models
 License: GPL-2
