--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: c060
-Version: 0.13
+Version: 0.14
 Date: 2012-06-09
 Author: Martin Sill, Thomas Hielscher, Manuela Zucknick, Natalia Becker.
 Maintainer: Martin Sill <m.sill@dkfz.de>
 Title: Additional variable selection, model validation and parameter tuning functions for glmnet models
-Depends: glmnet, parallel, mlegp, tgp, peperr, penalizedSVM
-Imports: glmnet, parallel, mlegp, tgp, peperr, penalizedSVM
+Depends: glmnet, mlegp, tgp, peperr, penalizedSVM
+Imports: glmnet, mlegp, tgp, peperr, penalizedSVM
 Suggests: survival
 Description: c060 provides additonal functions to perform stability selection, model validation and parameter tuning for glmnet models
 License: GPL-2
