s3 für plot.stabpath
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/c060@110 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -1,5 +1,4 @@
 export(stability.path,
-       plotstabpath,
        stability.selection,
        aggregation.auc,
        complexity.glmnet,
@@ -17,3 +16,4 @@ export(stability.path,
 )
 
 
+S3method("plot", "stabpath")
