--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: c060
-Version: 0.2
-Date: 2013-04-15
+Version: 0.2-1
+Date: 2013-04-17
 Author: Martin Sill, Thomas Hielscher, Manuela Zucknick, Natalia Becker.
 Maintainer: Martin Sill <m.sill@dkfz.de>
-Title: Additional variable selection, model validation and parameter tuning functions for glmnet models
+Title: Extended Inference for Lasso and Elastic-Net Regularized Cox and Generalized Linear Models
 Depends: glmnet, survival, parallel, mlegp, tgp, peperr, penalizedSVM
 Imports: glmnet, survival, parallel, mlegp, tgp, peperr, penalizedSVM
 Suggests: survival
