--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: c060
-Version: 0.2-1
+Version: 0.21
 Date: 2013-04-17
 Author: Martin Sill, Thomas Hielscher, Manuela Zucknick, Natalia Becker.
 Maintainer: Martin Sill <m.sill@dkfz.de>
