changed stability selection such that pfer,fwer or pcer  can be controlled
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/c060@132 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -11,6 +11,7 @@ export(stability.path,
        get.cofn.int.search
        )
 
+S3method("print","stabpath")
 S3method("plot","stabpath")
 S3method("PLL","coxnet")
 S3method("predictProb","glmnet")
