convert interval seach functions into S3 functions; remove warnings in Rd files line breaks in usage section; changed function names in vingette + add  slash in (./Rdata)
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/c060@133 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -7,8 +7,9 @@ export(stability.path,
        fit.glmnet,
        Plot.peperr.curves,
        EPSGO,
-       tune.glmnet.interval,my.balanced.folds,
-       get.cofn.int.search
+       tune.glmnet.interval,
+       my.balanced.folds,
+       coef.opt.intsearch
        )
 
 S3method("print","stabpath")
@@ -16,5 +17,5 @@ S3method("plot","stabpath")
 S3method("PLL","coxnet")
 S3method("predictProb","glmnet")
 S3method("predictProb","coxnet")
-S3method("plot","summary.int")
 S3method("summary","intsearch")
+S3method("plot","sum.intsearch")
