--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -9,8 +9,7 @@ export(stabpath,
        EPSGO,
        tune.glmnet.interval,
        my.balanced.folds,
-       coef.opt.intsearch,
-       get.cofn.int.search
+       coef.opt.intsearch
        )
 
 S3method("print","stabpath")
