changed name of  coef.opt.intsearch -> coef.optmodel
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/c060@139 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -9,7 +9,7 @@ export(stabpath,
        EPSGO,
        tune.glmnet.interval,
        my.balanced.folds,
-       coef.opt.intsearch
+       coef.optmodel
        )
 
 S3method("print","stabpath")
