EPSGO -> epsgo , small changes in plot summary Rd file, delete renamed R files
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/c060@151 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -6,7 +6,7 @@ export(stabpath,
        complexity.glmnet,
        fit.glmnet,
        Plot.peperr.curves,
-       EPSGO,
+       epsgo,
        tune.glmnet.interval,
        balancedFolds,
        coef.optmodel
