plot.coef.glmnet.Rd
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/c060@153 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/c060.Rcheck/00_pkg_src/c060/NAMESPACE
+++ b/c060.Rcheck/00_pkg_src/c060/NAMESPACE
@@ -1,14 +1,21 @@
-export(stability.path,
-       plotstabpath,
-       stability.selection,
+import(glmnet, survival, parallel,  peperr, penalizedSVM, lattice)
+
+export(stabpath,
+       stabsel,
        aggregation.auc,
        complexity.glmnet,
        fit.glmnet,
-       PLL.coxnet,
-       plot.peperr.curves,
-       predictProb.glmnet,
-    predictProb.coxnet,
-    EPSGO,
-       tune.glmnet.interval,my.balanced.folds)
+       Plot.peperr.curves,
+       epsgo,
+       tune.glmnet.interval,
+       balancedFolds,
+       coef.optmodel
+       )
 
-
+S3method("print","stabpath")
+S3method("plot","stabpath")
+S3method("PLL","coxnet")
+S3method("predictProb","glmnet")
+S3method("predictProb","coxnet")
+S3method("summary","intsearch")
+S3method("plot","sum.intsearch")
