--- a/c060.Rcheck/c060/DESCRIPTION
+++ b/c060.Rcheck/c060/DESCRIPTION
@@ -1,15 +1,16 @@
 Package: c060
-Version: 0.15
-Date: 2012-06-09
+Version: 0.2-2
+Date: 2013-12-05
 Author: Martin Sill, Thomas Hielscher, Manuela Zucknick, Natalia Becker.
 Maintainer: Martin Sill <m.sill@dkfz.de>
-Title: Additional variable selection, model validation and parameter
-        tuning functions for glmnet models
-Depends: glmnet, survival, parallel, mlegp, tgp, peperr, penalizedSVM
-Imports: glmnet, survival, parallel, mlegp, tgp, peperr, penalizedSVM
-Suggests: survival
+Title: Extended Inference for Lasso and Elastic-Net Regularized Cox and
+        Generalized Linear Models
+Depends:
+Imports: glmnet, survival, parallel, mlegp, tgp, peperr, penalizedSVM,
+        lattice
+Suggests:
 Description: c060 provides additional functions to perform stability selection, model validation and parameter tuning for glmnet models
 License: GPL-2
 LazyLoad: yes
-Packaged: 2013-02-19 11:12:15 UTC; root
-Built: R 2.15.2; ; 2013-02-19 11:12:19 UTC; unix
+Packaged: 2013-12-17 10:43:39 UTC; root
+Built: R 3.0.2; ; 2013-12-17 10:43:39 UTC; unix
