update due to changes in glmnet 3.0
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/c060@192 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -20,3 +20,9 @@ S3method("predictProb","coxnet")
 S3method("summary","intsearch")
 S3method("plot","sum.intsearch")
 S3method("coef","sum.intsearch")
+
+importFrom("grDevices", "dev.off", "gray.colors", "pdf")
+importFrom("graphics", "abline", "grid", "legend", "lines", "matplot",
+     "par", "plot", "polygon", "text", "axis")
+importFrom("stats", "approx", "coef", "predict", "quantile", "runif",
+     "sd")
