--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: c060
 Version: 0.2-5
-Date: 2016-10-25
+Date: 2019-11-29
 Author: Martin Sill, Thomas Hielscher, Manuela Zucknick, Natalia Becker.
 Maintainer: Martin Sill <m.sill@dkfz.de>
 Title: Extended Inference for Lasso and Elastic-Net Regularized Cox and Generalized Linear Models
 Depends: 
 Imports: glmnet, survival, parallel, mlegp, tgp, peperr, penalizedSVM, lattice
 Suggests: 
-Description: c060 provides additional functions to perform stability selection, model validation and parameter tuning for glmnet models
+Description: The c060 package provides additional functions to perform stability selection, model validation and parameter tuning for glmnet models.
 License: GPL-2
 LazyLoad: yes
